Ensure user area in offscreen nav is always hidden on non responsive sites

--- a/app/assets/stylesheets/_globalnav/_core/_nav.sass
+++ b/app/assets/stylesheets/_globalnav/_core/_nav.sass
@@ -173,11 +173,15 @@
     margin-top: 0
     background-color: $offscreen-nav-user-background
     height: 50px
+    &:after
+      content: ''
     +respond-to(wide-view)
       content: "\e014"
       margin-top: 10px
       background: none
       height: auto
+      &:after
+        content: "\e014"
 
   &:after
     @extend %lp-font-stack
